--- a/backend/package.json
+++ b/backend/package.json
@@ -15,10 +15,14 @@
     "@types/express": "^4.17.21",
     "@types/pg": "^8.11.5",
     "cors": "^2.8.5",
+    "envalid": "^8.0.0",
     "express": "^4.19.2",
     "nodemon": "^3.1.0",
     "pg": "^8.11.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
+  },
+  "dependencies": {
+    "dotenv": "^16.4.5"
   }
 }
