--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,11 @@
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "@types/pg": "^8.11.5",
+    "@types/pg": "^8.11.5"
+  },
+  "dependencies": {
+    "dotenv": "^16.4.5",
+    "typeorm": "^0.3.20",
     "cors": "^2.8.5",
     "envalid": "^8.0.0",
     "express": "^4.19.2",
@@ -22,8 +26,5 @@
     "pg": "^8.11.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
-  },
-  "dependencies": {
-    "dotenv": "^16.4.5"
   }
 }
