--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,5 +1,7 @@
-POOL_USER=
-POOL_PASSWORD=
-POOL_HOST=
-POOL_PORT=
-POOL_DATABASE=
+DB_USER=
+DB_PASSWORD=
+DB_HOST=
+DB_PORT=
+DB_DATABASE=
+
+PORT=
